src/styles/modules/tabs.less
/* -----------------
Tabbed Content
----------------- */
.tabbed-content {

    .tabbed-content-tabs {
        margin-bottom: 25px;
        border-bottom: 1px solid #c0c0c0;
        clear: both;
        width: 75%;

        li {
            a {
                margin-right: 0px;
            }
            small {
                font-size: 11px;
            }

            &.tab-icon {
                .icon {
                    margin-right: 10px;
                    &.sprite-device-laptop {
                        margin-right: 7px;
                    }
                }
                .icon + span {
                    float: right;
                    margin-top: 2px;
                }

                a, a:hover {
                    padding: 8px 10px 2px 10px;
                    background-position: 8px 8px !important;
                    background-repeat: no-repeat !important;
                }
            }
        }
        li:hover {
            border-bottom: 2px solid #c0c0c0;
            a {
                background: none;
                border-color: #fff;
                &:hover {
                    text-decoration: none;
                }
            }
        }
        .active {
            border-bottom-width: 2px;
            border-bottom-style: solid;
            border-bottom-color: #000;
            &:hover {
                a {
                    border-color: #ddd;
                }
            }
        }

        .subnav-mobile {
            display: none;
        }

        @media screen and (min-width: @screen-sm-min) { // Tablet/Desktop
            &.tabbed-content-tabs-centred {
                width: 100%;
                height: 44px;
                text-align: center;
                ul {
                    display: inline-block;
                }
            }
        }

        @media screen and (max-width: @screen-xs-max) { // Phone
            border: 1px solid #ddd;
            .nav-tabs {
                border-bottom: 0px;
            }
            li {
                clear: both;
                width: 100%;
                border: 0px;

                &:hover {
                    border-bottom: 0px;
                }
                a {
                    border: 0px;
                    border-left-width: 3px;
                    border-left-style: solid;
                    border-left-color: #fff;
                    border-radius: 0px;
                    background: none;
                    float: left;
                    width: 100%;
                }

                &.tab-icon {
                    .icon {
                        float: left;
                    }
                    .icon + span {
                        float: left;
                    }
                    a, a:hover {
                        padding: 8px 10px;
                    }
                }

                &.active {
                    border-bottom: 0px;
                    a, a:hover {
                        border-width: 0px;
                        border-left-width: 3px;
                    }
                    a {
                        font-weight: bold;
                    }
                    .subnav-mobile {
                        background: #F7F7F7;
                        list-style: none;
                        display: block;
                        float: left;
                        width: 100%;
                        a {
                            padding: 10px 20px;
                            display: inline-block;
                            border-left: 0px;
                            font-weight: normal;
                            span {
                                padding-left: 5px;
                            }
                        }
                        li {
                            border-top: 1px solid #efefef;
                            &:first-child {
                                border-top: 0px;
                            }
                        }
                        li.active a {
                            color: #555;
                        }
                    }
                    &.tab-icon .subnav-mobile a {
                        padding-left: 45px !important;
                    }
                }
            }
        }
    }

    .tabbed-content-body {
        display: none;

        &.is-active {
            display: block;
        }
    }

    // Phone
    @media screen and (max-width: @screen-sm-max) {
        .tabbed-content-tabs {
            width: 100%;

            li .sub-label {
                display: none;
            }
        }
    }
}

